--- a/templates/result.html
+++ b/templates/result.html
@@ -1,14 +1,93 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>{{ filename }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Skeleton App</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Image uploaded and processed</h1>
-    <img src="data:image/png;base64,{{ skeleton_img_base64 }}" alt="Skeleton image" />
-    <a href="data:image/png;base64,{{ skeleton_img_base64 }}" download="{{ filename }}-skeleton.png"
-      >Download skeleton image</a
+    <nav
+      class="navbar border-bottom"
+      style="background-color: #273f26; border-color: #8dcc88"
+      data-bs-theme="dark"
     >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+          <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" style="width: 30px" />
+          Skeleton App
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid transparent-box">
+      <h1>Image uploaded and processed</h1>
+      <img
+        src="data:image/png;base64,{{ skeleton_img_base64 }}"
+        class="img-fluid"
+        alt="Skeleton image"
+      />
+      <a
+        href="data:image/png;base64,{{ skeleton_img_base64 }}"
+        download="{{ filename }}-skeleton.png"
+        class="btn btn-warning transparent-button"
+        >Download the Sketch</a
+      >
+      <a
+        href="data:image/png;base64,{{ skeleton_img_base64 }}"
+        download="{{ filename }}-skeleton.png"
+        class="btn btn-danger transparent-button"
+        >Download the Skeleton</a
+      >
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
