--- a/templates/result.html
+++ b/templates/result.html
@@ -66,6 +66,19 @@
     </nav>
     <div class="container-fluid transparent-box">
       <h1>Image uploaded and processed</h1>
+      <h2>Outline</h2>
+      <img
+        src="data:image/png;base64,{{ outline_img_base64 }}"
+        class="img-fluid"
+        alt="Outline image"
+      />
+      <a
+        href="data:image/png;base64,{{ outline_img_base64 }}"
+        download="{{ filename }}-sketch.png"
+        class="btn btn-warning transparent-button"
+        >Download the Sketch</a
+      >
+      <h2>Skeleton</h2>
       <img
         src="data:image/png;base64,{{ skeleton_img_base64 }}"
         class="img-fluid"
@@ -74,16 +87,11 @@
       <a
         href="data:image/png;base64,{{ skeleton_img_base64 }}"
         download="{{ filename }}-skeleton.png"
-        class="btn btn-warning transparent-button"
-        >Download the Sketch</a
-      >
-      <a
-        href="data:image/png;base64,{{ skeleton_img_base64 }}"
-        download="{{ filename }}-skeleton.png"
         class="btn btn-danger transparent-button"
         >Download the Skeleton</a
       >
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
