--- a/templates/result.html
+++ b/templates/result.html
@@ -66,7 +66,7 @@
     </nav>
     <div class="container-fluid transparent-box">
       <h1>Image uploaded and processed</h1>
-      <h2>Outline</h2>
+      <h2>Sketch</h2>
       <img
         src="data:image/png;base64,{{ outline_img_base64 }}"
         class="img-fluid"
