--- a/templates/translate.html
+++ b/templates/translate.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Skeleton App</title>
+    <title>Translate MATLAB to Python</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -39,7 +39,7 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/translate">Translate</a>
+              <a class="nav-link active" href="/translate">Translate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
@@ -65,33 +65,13 @@
       </div>
     </nav>
     <div class="container-fluid transparent-box">
-      <h1>Image uploaded and processed</h1>
-      <h2>Sketch</h2>
-      <img
-        src="data:image/png;base64,{{ outline_img_base64 }}"
-        class="img-fluid"
-        alt="Outline image"
-      />
-      <a
-        href="data:image/png;base64,{{ outline_img_base64 }}"
-        download="{{ filename }}-sketch.png"
-        class="btn btn-warning transparent-button"
-        >Download the Sketch</a
-      >
-      <h2>Skeleton</h2>
-      <img
-        src="data:image/png;base64,{{ skeleton_img_base64 }}"
-        class="img-fluid"
-        alt="Skeleton image"
-      />
-      <a
-        href="data:image/png;base64,{{ skeleton_img_base64 }}"
-        download="{{ filename }}-skeleton.png"
-        class="btn btn-danger transparent-button"
-        >Download the Skeleton</a
-      >
+      <h1>Translate MATLAB to Python</h1>
+      <form action="/translate" method="post" class="form-outline">
+        <label for="code">Enter your MATLAB code:</label><br />
+        <textarea id="code" name="code" rows="10" class="form-control"></textarea><br />
+        <input type="submit" value="Translate" class="btn btn-warning transparent-button" />
+      </form>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
