--- a/templates/upload.html
+++ b/templates/upload.html
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="/translate">Translate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
