chatgpt call working

--- a/templates/translate.html
+++ b/templates/translate.html
@@ -67,8 +67,9 @@
     <div class="container-fluid transparent-box">
       <h1>Translate MATLAB to Python</h1>
       <form action="/translate" method="post" class="form-outline">
-        <label for="code">Enter your MATLAB code:</label><br />
-        <textarea id="code" name="code" rows="10" class="form-control"></textarea><br />
+        <label for="matlab_code">Enter your MATLAB code:</label><br />
+        <textarea id="matlab_code" name="matlab_code" rows="10" class="form-control"></textarea
+        ><br />
         <input type="submit" value="Translate" class="btn btn-warning transparent-button" />
       </form>
     </div>
