--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav
-      class="navbar border-bottom"
+      class="navbar navbar-expand-lg border-bottom sticky-top"
       style="background-color: #273f26; border-color: #8dcc88"
       data-bs-theme="dark"
     >
@@ -64,7 +64,8 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid transparent-box">
+    <!-- <div class="container-fluid transparent-box"> -->
+    <div class="container-fluid">
       <h1>Image uploaded and processed</h1>
       <h2>Sketch</h2>
       <img
