--- a/templates/translated.html
+++ b/templates/translated.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav
-      class="navbar border-bottom"
+      class="navbar navbar-expand-lg border-bottom sticky-top"
       style="background-color: #273f26; border-color: #8dcc88"
       data-bs-theme="dark"
     >
