added syntax highlighting for translated

--- a/static/style.css
+++ b/static/style.css
@@ -37,6 +37,7 @@ body {
   border: 1px solid black;
 }
 
-.form-control {
-  max-width: 500px !important;
+.form-control,
+pre {
+  max-width: 100% !important;
 }
