added sessions for apikey

--- a/templates/translate.html
+++ b/templates/translate.html
@@ -67,6 +67,9 @@
     <div class="container-fluid transparent-box">
       <h1>Translate MATLAB to Python</h1>
       <form action="/translate" method="post" class="form-outline">
+        <label for="api_key">Enter your OpenAI API Key:</label><br />
+        <input type="password" id="api_key" name="api_key" value="{{api_key}}" /><br />
+
         <label for="matlab_code">Enter your MATLAB code:</label><br />
         <textarea id="matlab_code" name="matlab_code" rows="10" class="form-control"></textarea
         ><br />
