--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Translate MATLAB to Python</title>
+    <title>Skeleton App</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/upload">Skeleton Generator</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/translate">Translate</a>
+              <a class="nav-link" href="/translate">Translate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
@@ -67,18 +67,8 @@
         </div>
       </div>
     </nav>
-
     <div class="container-fluid transparent-box">
-      <h1>Translate MATLAB to Python</h1>
-      <form action="/translate" method="post" class="form-outline">
-        <label for="api_key">Enter your OpenAI API Key:</label><br />
-        <input type="password" id="api_key" name="api_key" value="{{api_key}}" /><br />
-
-        <label for="matlab_code">Enter your MATLAB code:</label><br />
-        <textarea id="matlab_code" name="matlab_code" rows="10" class="form-control"></textarea
-        ><br />
-        <input type="submit" value="Translate" class="btn btn-warning transparent-button" />
-      </form>
+      <h1>Home</h1>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
