--- a/templates/result.html
+++ b/templates/result.html
@@ -39,6 +39,9 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/upload">Skeleton Generator</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/translate">Translate</a>
             </li>
             <li class="nav-item">
@@ -83,6 +86,7 @@
       <img
         src="data:image/png;base64,{{ skeleton_img_base64 }}"
         class="img-fluid"
+        id="skeleton-img"
         alt="Skeleton image"
       />
       <a
@@ -92,7 +96,6 @@
         >Download the Skeleton</a
       >
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
