--- a/templates/translated.html
+++ b/templates/translated.html
@@ -43,7 +43,10 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/translate">Translate</a>
+              <a class="nav-link" aria-current="page" href="/upload">Skeleton Generator</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/translate">Translate</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
