--- a/templates/upload.html
+++ b/templates/upload.html
@@ -36,7 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/upload">Skeleton Generator</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/translate">Translate</a>
@@ -64,6 +67,7 @@
         </div>
       </div>
     </nav>
+
     <div class="container-fluid transparent-box">
       <h1>Upload your image</h1>
       <p>Upload your image to the server:</p>
