--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ body {
   background-size: cover;
 }
 
-.btn-warning {
+.btn {
   background-color: var(--green) !important;
   border: none !important;
   color: #fff !important;
