--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,11 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav
@@ -42,38 +47,26 @@
               <a class="nav-link" aria-current="page" href="/upload">Skeleton Generator</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/translate">Translate</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+              <a class="nav-link" href="/translate">Translator</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container-fluid transparent-box">
+
+    <div class="container">
       <h1>Home</h1>
+      <p>This application has two main features:</p>
+      <ul>
+        <li><strong>Skeleton Generator:</strong> Generates a skeleton from an uploaded image.</li>
+        <li><strong>Translator:</strong> Converts Matlab code into Python.</li>
+      </ul>
+      <!-- <p>You can navigate to these features using the links above or the buttons below.</p> -->
+
+      <div class="links">
+        <a href="/upload" class="btn btn-primary">Go to Skeleton Generator</a>
+        <a href="/translate" class="btn btn-primary">Go to Translator</a>
+      </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
