--- a/templates/result.html
+++ b/templates/result.html
@@ -10,6 +10,11 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav
@@ -42,26 +47,7 @@
               <a class="nav-link active" aria-current="page" href="/upload">Skeleton Generator</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/translate">Translate</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+              <a class="nav-link" href="/translate">Translator</a>
             </li>
           </ul>
         </div>
@@ -70,7 +56,8 @@
     <!-- <div class="container-fluid transparent-box"> -->
     <div class="container-fluid">
       <h1>Image uploaded and processed</h1>
-      <h2>Sketch</h2>
+      <!-- <hr /> -->
+      <h3>Sketch</h3>
       <img
         src="data:image/png;base64,{{ outline_img_base64 }}"
         class="img-fluid"
@@ -82,7 +69,7 @@
         class="btn btn-warning transparent-button"
         >Download the Sketch</a
       >
-      <h2>Skeleton</h2>
+      <h3>Skeleton</h3>
       <img
         src="data:image/png;base64,{{ skeleton_img_base64 }}"
         class="img-fluid"
@@ -96,10 +83,5 @@
         >Download the Skeleton</a
       >
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
