--- a/templates/translated.html
+++ b/templates/translated.html
@@ -63,8 +63,8 @@
 
     <div class="container-fluid transparent-box">
       <h1>Translation Results</h1>
-      <h4>Original MATLAB code</h4>
-      <pre><code class="language-matlab">{{matlab_code}}</code></pre>
+      <!-- <h4>Original MATLAB code</h4>
+      <pre><code class="language-matlab">{{matlab_code}}</code></pre> -->
       <h4>Translated Python code</h4>
       <pre><code class="language-python">{{python_code}}</code></pre>
       <a href="/translate" class="btn">Translate more code</a>
