--- a/templates/result.html
+++ b/templates/result.html
@@ -43,16 +43,32 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/upload">Skeleton Generator</a>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link active dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Skeleton Generator
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/upload">Upload Image</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="/history">See Skeletons</a></li>
+              </ul>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="/translate">Translator</a>
+              <a class="nav-link" href="/translate">M-to-PY</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
     <div class="container-fluid">
       <h1>Image uploaded and processed</h1>
       <h3>Sketch</h3>
