--- a/templates/history.html
+++ b/templates/history.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Skeleton App</title>
+    <title>History of Skeletons</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -69,19 +69,21 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-4">
       <h1>History of Generated Skeletons</h1>
-      <ul>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for file in skeleton_files %}
-        <li>
-          <img
-            src="{{ url_for('static', filename='history/' + file) }}"
-            alt="Skeleton"
-            width="200"
-          />
-        </li>
+        <div class="col">
+          <div class="card">
+            <img
+              src="{{ url_for('static', filename='history/' + file) }}"
+              alt="Skeleton"
+              class="card-img-top"
+            />
+          </div>
+        </div>
         {% endfor %}
-      </ul>
+      </div>
     </div>
   </body>
 </html>
